--- a/client/game.html
+++ b/client/game.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Atalea</title>
     <link rel="stylesheet" type="text/css" href="game.css"/>
-    <link rel="stylesheet" type="text/css" href="icons.css"/>
+    <link rel="stylesheet" type="text/css" href="entity_icons.css"/>
     <script src="map.js"></script>
     <script src="markup.js"></script>
     <script src="game.js"></script>
