--- a/client/game.html
+++ b/client/game.html
@@ -39,10 +39,13 @@
       </div>
 
       <div class="neighbors box" id="neighbors">
-        <div>
-          <div></div>
-          <div class="statbar">
-            <div class="statvalue health"></div>
+        <div class="neighbor">
+          <div class="neighbor_icon"></div>
+          <div class="neighbor_info">
+            <div class="neighbor_brief"></div>
+            <div class="statbar">
+              <div class="statvalue health"></div>
+            </div>
           </div>
         </div>
       </div>
