fix layout of header

--- a/client/game.html
+++ b/client/game.html
@@ -14,23 +14,27 @@
 
   <body>
     <div id="container">
+
       <div class="header box" id="header">
-        <div id="player_name_auras">
-          <div id="player_name"></div>
-          <div id="player_auras"></div>
-        </div>
-        <div id="player_bars">
-          <div class="statbar" title="Health" id="player_health">
-            <div class="statvalue health"></div>
-            <div class="statlabel">0 / 0</div>
+        <div id="player_icon"></div>
+        <div id="player_info">
+          <div id="player_name_auras">
+            <div id="player_name"></div>
+            <div id="player_auras"></div>
           </div>
-          <div class="statbar" title="Energy" id="player_energy">
-            <div class="statvalue energy"></div>
-            <div class="statlabel">0 / 0</div>
-          </div>
-          <div class="statbar" title="Experience" id="player_xp">
-            <div class="statvalue xp"></div>
-            <div class="statlabel">0 / 0</div>
+          <div id="player_bars">
+            <div class="statbar" title="Health" id="player_health">
+              <div class="statvalue health"></div>
+              <div class="statlabel">0 / 0</div>
+            </div>
+            <div class="statbar" title="Energy" id="player_energy">
+              <div class="statvalue energy"></div>
+              <div class="statlabel">0 / 0</div>
+            </div>
+            <div class="statbar" title="Experience" id="player_xp">
+              <div class="statvalue xp"></div>
+              <div class="statlabel">0 / 0</div>
+            </div>
           </div>
         </div>
       </div>
