--- a/client/game.html
+++ b/client/game.html
@@ -70,6 +70,7 @@
         <div class="button toggle_off" id="equipment" onclick="handler.showPane('equipment');"></div>
         <div class="button toggle_off" id="combat" onclick="handler.showPane('combat');"></div>
         <div class="button toggle_off" id="skills" onclick="handler.showPane('skills');"></div>
+        <div class="button toggle_off" id="quests" onclick="handler.showPane('quests');"></div>
         <div class="button toggle_off" id="chat" onclick="handler.showPane('chat');"></div>
         <div class="spacer"></div>
         <div class="button toggle_on" id="local_map"></div>
@@ -172,6 +173,9 @@
 
         <div id="skills_pane">
           <div class="karma"><div>Unspent karma:</div><div id="unspent_karma">0</div></div>
+        </div>
+
+        <div id="quests_pane">
         </div>
 
         <div id="chat_pane" class="textbox">
