--- a/client/game.html
+++ b/client/game.html
@@ -172,7 +172,7 @@
         </div>
 
         <div id="skills_pane">
-          <div class="karma"><div>Unspent karma:</div><div id="unspent_karma">0</div></div>
+          <div id="unspent_karma"></div>
         </div>
 
         <div id="quests_pane">
