keep inventory pane sorted

--- a/client/game.html
+++ b/client/game.html
@@ -79,8 +79,7 @@
 
       <div class="rightbar box scroll">
         <div id="inventory_pane">
-          <div id="inventory_contents">
-          </div>
+          <div id="inventory_contents"></div>
         </div>
 
         <div id="equipment_pane">
