work on combat pane

--- a/client/game.html
+++ b/client/game.html
@@ -135,38 +135,16 @@
         </div>
 
         <div id="combat_pane">
-          <div class="combat_values">
-            <h3>Primary Attributes</h3>
-            <div class="combat_value"><div>Armor</div><div id="armor">0</div></div>
-            <div class="combat_value"><div>Strength</div><div id="strength">0</div></div>
-            <div class="combat_value"><div>Agility</div><div id="agility">0</div></div>
-            <div class="combat_value"><div>Intellect</div><div id="intellect">0</div></div>
-            <div class="combat_value"><div>Vitality</div><div id="vitality">0</div></div>
-            <div class="combat_value"><div>Toughness</div><div id="toughness">0</div></div>
-            <div class="combat_value"><div>Willpower</div><div id="willpower">0</div></div>
-            <div class="combat_value"><div>Compassion</div><div id="compassion">0</div></div>
-            <div class="combat_value"><div>Precision</div><div id="precision">0</div></div>
-            <div class="combat_value"><div>Ferocity</div><div id="ferocity">0</div></div>
-            <div class="combat_value"><div>Endurance</div><div id="endurance">0</div></div>
-            <div class="combat_value"><div>Insight</div><div id="insight">0</div></div>
+          <div>
+            <h3>Combat Traits</h3>
+            <div id="combat_traits"></div>
           </div>
-          <div class="combat_values">
-            <h3>Derived Attributes</h3>
-            <div class="combat_value"><div>Block</div><div id="block">0</div></div>
-            <div class="combat_value"><div>Dodge</div><div id="dodge">0</div></div>
-            <div class="combat_value"><div>Critical Chance</div><div id="critical_chance">0</div></div>
-            <div class="combat_value"><div>Critical Damage</div><div id="critical_damage">0</div></div>
-          </div>
-          <div class="combat_values">
-            <h3>Immunities</h3>
-            <div class="combat_value"><div>Crushing</div><div id="crushing">0</div></div>
-            <div class="combat_value"><div>Piercing</div><div id="piercing">0</div></div>
-            <div class="combat_value"><div>Slashing</div><div id="slashing">0</div></div>
-            <div class="combat_value"><div>Fire</div><div id="fire">0</div></div>
-            <div class="combat_value"><div>Cold</div><div id="cold">0</div></div>
-            <div class="combat_value"><div>Electricity</div><div id="electricity">0</div></div>
-            <div class="combat_value"><div>Arcane</div><div id="arcane">0</div></div>
-            <div class="combat_value"><div>Shadow</div><div id="shadow">0</div></div>
+          <div>
+            <h3>Damage Types</h3>
+            <div id="damage_types">
+              <div><div></div><div>Affinity</div><div>Resistance</div></div>
+              <div><div>Crushing</div><div>33</div><div>10</div></div>
+            </div>
           </div>
         </div>
 
