update combat pane, show item traits

--- a/client/game.html
+++ b/client/game.html
@@ -135,6 +135,12 @@
         </div>
 
         <div id="combat_pane">
+          <div id="attack_defense">
+            <div id="attack"></div>
+            <div id="defense"></div>
+            <div id="speed"></div>
+            <div id="damage"></div>
+          </div>
           <div>
             <h3>Combat Traits</h3>
             <div id="combat_traits"></div>
